# hvym_tunnler

./: .env.example  .gitignore  CUSTOM_DOMAINS.md  DEPLOY.md  Dockerfile  README.md  SETUP.md  TUNNEL_SERVICE.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: domains.py  identity.py  routes.py
app/auth/: __init__.py  challenge.py  jwt_verifier.py  session.py
app/crypto/: __init__.py  tunnel_crypto.py
app/domains/: __init__.py  models.py  registry.py  ssl.py  verification.py
app/registry/: __init__.py  store.py
app/services/: ziti_service.py
app/tunnel/: __init__.py  connection.py
config/: nginx-hvym-tunnler.conf
data/: .gitkeep
docs/: ARCHITECTURE.md  HVYM_STELLAR_JWT.md  METAVINCI_TUNNELER.md  SEAMLESS_TUNNELING.md  START_SCRIPT.md
scripts/: boot_check.sh  config.sh  generate_client_config.sh  install.sh  oracle_startup.sh  setup_identity.py  test_tunnel_client.py  vps_startup.sh
scripts/setup/: 01_install_dependencies.sh  02_install_openziti.sh  03_init_controller.sh  04_setup_router.sh  05_setup_tunnel_service.sh
static/: .gitkeep
tests/: __init__.py  conftest.py  test_challenge.py  test_crypto.py  test_domains.py  test_server.py
